update lnd to 0.15.2-beta

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.1-beta"
+version: "0.15.2-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,21 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  The v0.15 release contains an "on the fly" migration that will start to write items in the revocation log in a more efficient manner. This release (v0.15.1) allows users to reclaim all the old disk space by converting historical records to the new format, with the old records being deleted.
-  
-  
-  This release also adds support for Taproot addresses, defaulting to using them where appropriate.
-  
-  
-  Also new (included since v0.15.0-beta-build-2):
-  
-  - Automatic channel recovery
-
-  - View your total (on-chain + off-chain) balance
-
-  - Bitcoin transactions open in local mempool app on your Umbrel (if it's installed)
-
-  - Support for Atomic Multi-path Payments (AMP)
+  fixes critical bug causes lnd to crash on startup.
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
