--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.1-beta"
+version: "0.15.2-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -37,6 +37,8 @@ releaseNotes: >-
   - Bitcoin transactions open in local mempool app on your Umbrel (if it's installed)
 
   - Support for Atomic Multi-path Payments (AMP)
+  
+  - Bugfix: A wire parsing bug has been fixed that would cause lnd to be unable decode certain large blocks
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
