Update release notes

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,10 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  fixes critical bug causes lnd to crash on startup.
+  This is an emergency hot fix release to fix a bug that can cause lnd nodes to be unable to parse certain large blocks.
+
+  
+  This release contains no major features, and is instead just a hotfix applied on top of v0.15.1.
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
