--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,10 +22,10 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This is an emergency hot fix release to fix a bug that can cause lnd nodes to be unable to parse certain large blocks.
+  This update includes LND v0.15.2, an emergency hotfix release to fix a bug that can cause LND nodes to be unable to parse certain large blocks.
 
   
-  This release contains no major features, and is instead just a hotfix applied on top of v0.15.1.
+  This release contains no major features, and is instead just a hotfix applied on top of the last version.
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
