Use DNS to resolve Tor container

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - --bitcoin-rpcpassword=${APP_BITCOIN_RPC_PASS}
       - --proxy=${TOR_PROXY_IP}:${TOR_PROXY_PORT}
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
-      - --addr=statictor:${APP_ID}.tor:29051
+      - --addr=statictor:core-lightning_tor_1:29051
       - --tor-service-password=tortortor
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
@@ -73,4 +73,3 @@ services:
       - ${TOR_DATA_DIR}:/data
     environment:
       HOME: "/tmp"
-    hostname: "${APP_ID}.tor"
