--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       BITCOIN_S_TOR_ENABLED: "false"
       BITCOIN_S_TOR_PROVIDED: "true"
       BITCOIN_S_DLCNODE_PROXY_ENABLED: "true"
-      BITCOIN_S_DLCNODE_PROXY_SOCKS5: "suredbits-wallet_tor_1:9050"
+      BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${TOR_PROXY_IP}:${TOR_PROXY_PORT}"
       BITCOIN_S_DLCNODE_EXTERNAL_IP: $APP_SUREDBITS_WALLET_P2P_HIDDEN_SERVICE
       BITCOIN_S_BITCOIND_HOST: $APP_BITCOIN_NODE_IP
       BITCOIN_S_BITCOIND_PORT: $APP_BITCOIN_RPC_PORT
