--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - --proxy=${TOR_PROXY_IP}:${TOR_PROXY_PORT}
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
       - --addr=statictor:${TOR_PROXY_IP}:29051
-      - --tor-service-password=tortortor
+      - --tor-service-password=${TOR_PASSWORD}
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
