--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -28,7 +28,7 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-deterministicPassword: false
+deterministicPassword: true
 submitter: LN Markets
 submission: https://github.com/getumbrel/umbrel/pull/879
 releaseNotes: >-
