--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -31,3 +31,11 @@ defaultUsername: ""
 defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
+releaseNotes: >-
+  - Mentions and notifications
+
+  - Additions for LSATs and second-brain
+
+  - Bot DMs
+  
+  - Better bot auth
