--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: sphinx-relay
 category: Social
 name: Sphinx Relay
-version: "2.2.5"
+version: "2.2.10"
 tagline: Chat and pay over the Lightning Network
 description: >-
   Sphinx Relay turns your Lightning node into a personal
@@ -31,3 +31,11 @@ defaultUsername: ""
 defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
+releaseNotes: >-
+  - Mentions and notifications
+
+  - Additions for LSATs and second-brain
+
+  - Bot DMs
+  
+  - Better bot auth
