--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "1.30.2"
+version: "v1.33.19"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,8 +28,7 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  - Fix IPv6-mapped-IPv4 addresses in STUN responses
-
-  - Better container detection
+  support NextDNS
+  Various bug fixes
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
