Patch up releaseNotes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,7 +28,8 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  support NextDNS
-  Various bug fixes
+  - Support NextDNS
+
+  - Various bug fixes
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
