--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -2,10 +2,10 @@ manifestVersion: 1
 id: lnplus
 category: Lightning Node Management
 name: LN+
-version: "0.1.9"
-tagline: Database-free Bitcoin Lightning Network liquidity swaps coordination
+version: "0.1.10"
+tagline: Get incoming liquidity and double your channels for free
 description: >-
-  Lightning Network Plus (LN+) is a free web app that helps the users of the Bitcoin Lightning Network organize themselves and create liquidity swap triangles, squares and pentagons, in order to create outgoing and incoming liquidity.
+  Lightning Network Plus (LN+) is a free app that helps the users of the Bitcoin Lightning Network organize themselves and create liquidity swaps, in order to get incoming liquidity and to grow channel count and capacity twice as fast without incuring any extra channel opening costs. We will walk you through each step to make it an easy process. As a first step, this the LN+ app automatically logs you in with your node. Second, you can pick a swap to join, or you can create a new one. Third, you can optionally chat with other node operators. Next, LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. Finally, you can rate other swap participants, and you will receive ratings to build your node reputation.
 releaseNotes: >-
   Beta version
 developer: Alan Plus
