--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -5,9 +5,9 @@ name: LN+
 version: "0.1.10"
 tagline: Get incoming liquidity and double your channels for free
 description: >-
-  Lightning Network Plus (LN+) is a free app that helps the users of the Bitcoin Lightning Network organize themselves and create liquidity swaps, in order to get incoming liquidity and to grow channel count and capacity twice as fast without incuring any extra channel opening costs. We will walk you through each step to make it an easy process. As a first step, this the LN+ app automatically logs you in with your node. Second, you can pick a swap to join, or you can create a new one. Third, you can optionally chat with other node operators. Next, LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. Finally, you can rate other swap participants, and you will receive ratings to build your node reputation.
+  Lightning Network Plus (LN+) is a free app that helps lightning node operators organize and create liquidity swaps together. The objective is to get incoming liquidity, and to grow channel count and capacity twice as fast without incuring any extra costs. We will walk you through each step to make it an easy process. As a first step, this app automatically logs you in using your node. Second, you can join a swap, or you can create a new one. Third, you can optionally chat with other node operators. Next, LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. Finally, you can rate other swap participants, and you will receive ratings to build your node reputation.
 releaseNotes: >-
-  Beta version
+  Very first beta version release.
 developer: Alan Plus
 website: https://lightningnetwork.plus
 dependencies:
