--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -1,13 +1,13 @@
 manifestVersion: 1
 id: lnplus
 category: Lightning Node Management
-name: LN+
+name: Lightning Network+
 version: "0.1.10"
 tagline: Get incoming liquidity and double your channels for free
 description: >-
-  Lightning Network Plus (LN+) is a free app that helps lightning node operators organize and create liquidity swaps together. The objective is to get incoming liquidity, and to grow channel count and capacity twice as fast without incuring any extra costs. We will walk you through each step to make it an easy process. As a first step, this app automatically logs you in using your node. Second, you can join a swap, or you can create a new one. Third, you can optionally chat with other node operators. Next, LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. Finally, you can rate other swap participants, and you will receive ratings to build your node reputation.
+  Lightning Network Plus (LN+) is a free app that helps lightning node operators to team up and create liquidity swaps. We will walk you through each step to make it an easy process. You will get incoming liquidity, and will be able to grow your channel count and capacity twice as fast, without any extra costs. The app will automatically log you in with your node. You can join a swap or you can create a new one. You can chat with other node operators. LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. You can rate swap participants, and you will receive ratings to build your node's reputation.
 releaseNotes: >-
-  Very first beta version release.
+  Initial beta version.
 developer: Alan Plus
 website: https://lightningnetwork.plus
 dependencies:
