Update specter desktop to 0.13.1

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: Finance
 name: Specter Desktop
-version: "1.13.0"
+version: "1.13.1"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,32 +44,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Feature: Improve Dev-Console #1850 (k9ert)
+  - Bugfix: Hover effect in balance display #1904 (Manolis Mandrapilias)
 
-  - Feature: Menu extensions can extend menus #1648 (k9ert)
+  - Bugfix: Remove black empty bar in tx-table after search #1912 (relativisticelectron)
 
-  - UIUX: Adding "Open Bitcoin app" verbiage to Ledger Upload Keys page #1868 (wombat6)
+  - Bugfix: upgrade hwi to 2.1.1 to fix #1840 #1909 (k9ert)
 
-  - UIUX: Better balance display #1841 (relativisticelectron)
+  - Privacy: Disabeling spellcheck to avoid any leakage to 3rd party servers #1892 (relativisticelectron)
 
-  - UIUX: Do not hide elements by default #1854 (relativisticelectron)
+  - UIUX: Clearer unconfirmed transaction icons #1899 (relativisticelectron)
 
-  - UIUX: Individual HWI progess for Ledger devices #1864 (Manolis Mandrapilias)
-
-  - Mobile: Better width settings #1828 (relativisticelectron)
-
-  - Mobile: Optimisation of tx-table #1852 (Manolis Mandrapilias)
-
-  - Bugfix: Add non-witness-utxos and xpubs when using hwi with ledger #1888 (Salvatore Ingala)
-
-  - Bugfix: Escaped HTML in messages and errors #1890 (relativisticelectron)
-
-  - Bugfix: HTML escaped on Cobo and Coldcard Upload Keys page #1871 (wombat6)
-
-  - Bugfix: Missing values in tx details #1862 (relativisticelectron)
-
-  - Bugfix: during loading: KeyError: 'blocks' #1859 (relativisticelectron)
-  
-  - And many other bugfixes...
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
