add sha256 to image

--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: $APP_LNPLUS_IP
       APP_PORT: $APP_LNPLUS_PORT
   web:
-    image: lightningnetworkplus/lnpclient:v0.1.11
+    image: lightningnetworkplus/lnpclient:v0.1.11@sha256:c8943c71bad4d8a0b89b649f55fa3dcc8d2255127b2aa967c0feca3999a7d54e
     restart: on-failure
     stop_grace_period: 1m
     volumes:
