--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -6,13 +6,13 @@ services:
       APP_HOST: $APP_LNPLUS_IP
       APP_PORT: $APP_LNPLUS_PORT
   web:
-    image: lightningnetworkplus/lnpclient:v0.1.11@sha256:c8943c71bad4d8a0b89b649f55fa3dcc8d2255127b2aa967c0feca3999a7d54e
+    image: lightningnetworkplus/lnpclient:v0.1.11@sha256:fab527c4c0d597e78e18a5ece0002d590b311f910249330ab2447b8f36bc76f2
     restart: on-failure
     stop_grace_period: 1m
     volumes:
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
-      RAILS_ENVIRONMENT: $RAILS_ENVIRONMENT
+      RAILS_ENVIRONMENT: $APP_LNPLUS_RAILS_ENVIRONMENT
       LN_IMPLEMENTATION: "LND"
       LN_SERVER_URL: $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT/
       MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
