Tiny tiny tweak

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -48,7 +48,7 @@ releaseNotes: >-
 
   - Bugfix: Remove black empty bar in tx-table after search #1912 (relativisticelectron)
 
-  - Bugfix: upgrade hwi to 2.1.1 to fix #1840 #1909 (k9ert)
+  - Bugfix: Upgrade hwi to 2.1.1 to fix #1840 #1909 (k9ert)
 
   - Privacy: Disabeling spellcheck to avoid any leakage to 3rd party servers #1892 (relativisticelectron)
 
