Use APP_DATA_DIR to store data

--- a/trilium-note/docker-compose.yml
+++ b/trilium-note/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       - PUID=1000
       - PGID=1000
       - VERSION=docker
-      - TRILIUM_DATA_DIR=/home/node/trilium-data
+      - TRILIUM_DATA_DIR=/data
     ports:
       - 8080:8080
     volumes:
-      - ${UMBREL_ROOT}/data/storage/trilium:/home/node/trilium-data
+      - ${APP_DATA_DIR}/data:/data
 
