Rename to Trilium Notes

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
-id: trilium-note
+id: trilium-notes
 category: Productivity
-name: Trilium Note
+name: Trilium Notes
 version: "0.55.1"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
