Update support link

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -46,7 +46,7 @@ developer: ZAdam
 website: https://github.com/zadam/trilium
 dependencies: []
 repo: https://github.com/zadam/trilium
-support: https://github.com/zadam/trilium
+support: https://github.com/zadam/trilium/wiki
 port: 3779
 gallery:
   - 1.jpg
