--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.5@sha256:ed35e1b63de0d5a80d5768d80e4e1e5e7716275b6e7e046411c3301db2bd929c
+    image: bitcoinscala/wallet-server-ui:1.9.6
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.5@sha256:d229edd0eda2897dea03f47f97a68d955a39654150b10dd53f27786744f36900
+    image: bitcoinscala/bitcoin-s-server:1.9.6
     entrypoint: ["/opt/docker/bin/bitcoin-s-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     user: "1000:1000"
     restart: on-failure
