--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >
-  - Implement websocket events for filter headers / filters.
+  - Add network notifications for failures while negotiating a DLC, fix wallet bug with balances not being moved from unconfirmed -> confirmed 
 
 developer: Suredbits
 website: https://suredbits.com
