--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -31,5 +31,27 @@ path: ""
 defaultUsername: "admin"
 defaultPassword: "admin123"
 torOnly: false
+releaseNotes: >-
+  New features:
+
+  - Cover images are cached when using gdrive storage and local storage
+  
+  - Kobo sync now uses calibre-web generated thumbnails as cover pictures
+  
+  - Pagination button disapear in standard theme once infinite scroll is triggered
+  
+  - And others. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.19
+
+  Bug Fixes:
+
+  - Read status checkbox works again for custom columns
+  
+  - Character '\u200d' is removed from end of email address and no longer causes an error on send emails
+  
+  - Gevent log output is redirected to log file and no longer stops Calibre-web on Windows
+  
+  - custom column of type "Text, but with a fixed set of permitted values" with default color no longer leads to error 500
+  
+  - And more. Full details can be found in the changelog.
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/74
