--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -40,10 +40,10 @@ releaseNotes: >-
   
   - Pagination button disapear in standard theme once infinite scroll is triggered
   
-  - And others. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.19
+  - And more. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.19
 
 
-  Bug Fixes:
+  Bug fixes:
 
   - Read status checkbox works again for custom columns
   
