--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -2,13 +2,17 @@ manifestVersion: 1
 id: lnplus
 category: Lightning Node Management
 name: Lightning Network+
-version: "0.1.12"
+version: "0.1.13"
 tagline: Get incoming liquidity and double your channels for free
 description: >-
-  Lightning Network Plus (LN+) is a free app that helps lightning node operators to team up and create liquidity swaps. We will walk you through each step to make it an easy process. You will get incoming liquidity, and will be able to grow your channel count and capacity twice as fast, without any extra costs. The app will automatically log you in with your node. You can join a swap or you can create a new one. You can chat with other node operators. LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. You can rate swap participants, and you will receive ratings to build your node's reputation.
+  Lightning Network Plus (LN+) is a free app that helps lightning node operators to team up and create liquidity swaps.
+  
+  We will walk you through each step to make it an easy process. You will get incoming liquidity, and will be able to grow your channel count and capacity twice as fast, without any extra costs.
+  
+  The app will automatically log you in with your node. You can join a swap or you can create a new one. You can chat with other node operators. LN+ will help you open the channel with a single click, or you can open the channel manually with the app of your choice. You can rate swap participants, and you will receive ratings to build your node's reputation.
 releaseNotes: >-
-  Initial beta version.
-developer: Alan Plus
+  Beta version.
+developer: Lightning Network+
 website: https://lightningnetwork.plus
 dependencies:
   - lightning
@@ -22,3 +26,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Alan Plus
+submission: https://github.com/getumbrel/umbrel-apps/pull/202
