--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
-      RAILS_ENV: "production"
+      RAILS_ENV: "development"
       LN_IMPLEMENTATION: "LND"
       LN_SERVER_URL: $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT/
       MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
