--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -20,4 +20,4 @@ services:
       CERTIFICATE_PATH: "/lnd/tls.cert"
     networks:
       default:
-        ipv4_address: $APP_LNPLUS_IP
+        ipv4_address: lnplus_web_77
