try not having exports

--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_LNPLUS_IP
-      APP_PORT: $APP_LNPLUS_PORT
+      APP_HOST: "10.21.21.77"
+      APP_PORT: "3777"
   web:
     image: lightningnetworkplus/lnpclient:v0.1.14@sha256:642e786d8676273d3f6ff146a79bba2c5174d0886b474dec92f4d10fcb9dc30d 
     restart: on-failure
@@ -20,4 +20,4 @@ services:
       CERTIFICATE_PATH: "/lnd/tls.cert"
     networks:
       default:
-        ipv4_address: $APP_LNPLUS_IP
+        ipv4_address: "10.21.21.77"
