remove networks section

--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: "10.21.21.77"
+      APP_HOST: lnplus_web_1
       APP_PORT: "3777"
   web:
     image: lightningnetworkplus/lnpclient:v0.1.14@sha256:642e786d8676273d3f6ff146a79bba2c5174d0886b474dec92f4d10fcb9dc30d 
@@ -17,6 +17,3 @@ services:
       MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
       CONFIG_PATH: "/lnd/lnd.conf"
       CERTIFICATE_PATH: "/lnd/tls.cert"
-    networks:
-      default:
-        ipv4_address: "10.21.21.77"
