Update version, description, website

--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -2,14 +2,11 @@ manifestVersion: 1
 id: tallycoin-connect
 category: Finance
 name: Tallycoin Connect
-version: "1.7.3"
+version: "1.7.5"
 tagline: Connect Tallycoin with your Umbrel node
-description: Tallycoin is a crowdfunding platform built on top of the Bitcoin
-  blockchain. Every satoshi donated to you, belongs to you. Tallycoin takes no
-  cut. You can receive Tallycoin Lightning payouts directly to your own node by
-  pairing the Tallycoin Connect Umbrel app to your Tallycoin account.
+description: Tallycoin is a crowdfunding platform with bitcoin and lightning donations. Together with Tallycoin Connect, you can receive donations directly to your Umbrel node. Zero fees!
 developer: djbooth007
-website: https://github.com/djbooth007/tallycoin_connect
+website: https://tallycoin.app/connect/
 dependencies:
   - lightning
 repo: https://github.com/djbooth007/tallycoin_connect
