--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -3,8 +3,8 @@ id: tallycoin-connect
 category: Finance
 name: Tallycoin Connect
 version: "1.7.5"
-tagline: Connect Tallycoin with your Umbrel node
-description: Tallycoin is a crowdfunding platform with bitcoin and lightning donations. Together with Tallycoin Connect, you can receive donations directly to your Umbrel node. Zero fees!
+tagline: Crowdfund donations directly to your Umbrel node with Tallycoin.
+description: Tallycoin is a crowdfunding platform with bitcoin and lightning donations. Together with the Tallycoin Connect app, you can receive donations directly to your Umbrel node. Zero fees!
 developer: djbooth007
 website: https://tallycoin.app/connect/
 dependencies:
