--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -18,5 +18,7 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
+releaseNotes: >-
+  Added: On-chain wallet fallback (server-side) in case node is offline.
 submitter: d11n
 submission: https://github.com/getumbrel/umbrel/pull/1052
