Add image digests. Bump version in manifest file

--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.6
+    image: bitcoinscala/wallet-server-ui:1.9.6@sha256:8feb4d3d56f93ff0f528b028b114dc9e845057f6b0b7b860a50cd386e43ed946
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.6
+    image: bitcoinscala/bitcoin-s-server:1.9.6@sha256:4007311e6b2a7853e59b561c9961d8c9bef29cc0e026ef8b45c41b95d09667ae
     entrypoint: ["/opt/docker/bin/bitcoin-s-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     user: "1000:1000"
     restart: on-failure
