--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: lnplus_web_1
       APP_PORT: "3777"
+      API_URL: "https://lightningnetwork.plus/api/2/"
   web:
     image: lightningnetworkplus/lnpclient:v0.1.15@sha256:bee4bca8d04e271f59b6cf52598986bad2e3c254802cc844258762dc6eef0794
     restart: on-failure
