lightning-terminal: bump version to v0.8.2-alpha

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.8.0-alpha"
+version: "0.8.2-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -50,10 +50,7 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  Lightning v0.15.1-beta is required for this to function!
-
-
-  This release of Lightning Terminal (LiT) includes updates to the
-  versions of the packaged subsystems including LND, Loop and Pool.
+  This release of Lightning Terminal (LiT) updates the packaged 
+  version of LND to v0.15.3-beta.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
