--- a/elements/docker-compose.yml
+++ b/elements/docker-compose.yml
@@ -59,5 +59,13 @@ services:
     networks:
       default:
         ipv4_address: $APP_ELEMENTS_IP
-
   
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
