Fix typo in Core Lightning RTL tagline

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -3,7 +3,7 @@ id: core-lightning-rtl
 category: Lightning Node Management
 name: Ride The Lightning (Core Lightning)
 version: "0.13.1-beta"
-tagline: Mange your Core Lightning node with RTL
+tagline: Manage your Core Lightning node with RTL
 description: >-
   This version of RTL is specifically configured to use your Core Lightning node.
   
