Revert "Add internal Tor daemon to required apps (#218)"
This reverts commit fc82a6112f583f0e95b1877bf1528f9b15493b60.

--- a/elements/torrc.template
+++ b/elements/torrc.template
@@ -5,3 +5,7 @@ HiddenServicePort $APP_ELEMENTS_NODE_RPC_PORT $APP_ELEMENTS_NODE_IP:$APP_ELEMENT
 # elements p2p Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
 HiddenServicePort $APP_ELEMENTS_NODE_P2P_PORT $APP_ELEMENTS_NODE_IP:$APP_ELEMENTS_NODE_P2P_PORT
+
+# elements Hidden Service
+HiddenServiceDir /data/app-$APP_ID
+HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
