--- a/samourai-server/torrc.template
+++ b/samourai-server/torrc.template
@@ -1,7 +1,11 @@
 # samourai-server dojo Hidden Service
-HiddenServiceDir /data/app-$APP_ID-dojo
+HiddenServiceDir /data/app-samourai-server-dojo
 HiddenServicePort 80 $APP_SAMOURAI_SERVER_IP:80
 
 # samourai-server whirlpool Hidden Service
-HiddenServiceDir /data/app-$APP_ID-whirlpool
+HiddenServiceDir /data/app-samourai-server-whirlpool
 HiddenServicePort 80 $APP_SAMOURAI_SERVER_WHIRLPOOL_IP:$APP_SAMOURAI_SERVER_WHIRLPOOL_PORT
+
+# samourai-server connect Hidden Service
+HiddenServiceDir /data/app-samourai-server
+HiddenServicePort 80 $APP_SAMOURAI_SERVER_IP:8081
