--- a/squeaknode/torrc.template
+++ b/squeaknode/torrc.template
@@ -1,4 +1,8 @@
 # squeaknode p2p Hidden Service
-HiddenServiceDir /data/app-$APP_ID-p2p
+HiddenServiceDir /data/app-squeaknode-p2p
 HiddenServicePort $APP_SQUEAKNODE_P2P_PORT $APP_SQUEAKNODE_IP:$APP_SQUEAKNODE_P2P_PORT
 HiddenServicePort $APP_SQUEAKNODE_P2P_TESTNET_PORT $APP_SQUEAKNODE_IP:$APP_SQUEAKNODE_P2P_TESTNET_PORT
+
+# squeaknode Hidden Service
+HiddenServiceDir /data/app-squeaknode
+HiddenServicePort 80 $APP_SQUEAKNODE_IP:$APP_SQUEAKNODE_PORT
