Update lndboss to 2.8.1

--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -2,12 +2,13 @@ manifestVersion: 1
 id: lndboss
 category: Lightning Node Management
 name: LndBoss
-version: "2.0.1"
+version: "2.8.1"
 tagline: A GUI for BalanceOfSatoshis
 description: LndBoss is a GUI for BalanceOfSatoshis.
   It is a tool that makes it easy to run your favorite
   bos commands and helps manage your lightning node.
   You can schedule jobs to automatically rebalance channels,
+  auto update fees based on policies, open balanced/group channels with other nodes,
   integration with amboss to post updates and much more.
 developer: Nitesh Balusu
 website: https://github.com/niteshbalusu11
@@ -24,6 +25,43 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  - 2.8.1 (2022-10-25)
+    Added support for auto fee policy based on channel inactivity periods.
+    Fixed positioning of inactivity period of fees scheduler page.
+
+  - 2.7.1 (2022-10-23)
+    Fixed a bug where fee policy updates don't work for new channels.
+
+  - 2.7.0 (2022-10-11)
+    Added support for bos create-group-channel
+    Added support for bos join-group-channel
+    Bump dependencies
+
+  - 2.6.0 (2022-10-06)
+    Add openChannel, closeChannel and sendToChainAddress to call command.
+    Fixed a bug where numbers and boolean types were not getting converted.
+
+  - 2.5.0 (2022-10-05)
+    Added filter variable BLOCKS_SINCE_LAST_CHANNEL in peers command.
+    Added support for tags in bos forwards command.
+    Bumps several dependencies.
+
+  - 2.4.0 (2022-10-04)
+    Added support for scheduling automated fee/channel policies based on conditions.
+    Fixed tags command client page.
+    Fixed error messages on dashboard page.
+
+  - 2.3.0 (2022-09-23)
+    Added support for bos fees command
+    Bump dependencies
+
+  - 2.2.0 (2022-09-19)
+    Added for and query flags for chart-payments-received command
+    Change password validation requirements to only support length of 10 characters
+
+  - 2.1.0 (2022-09-16)
+    Support for bos open command for batch open and zero conf channels
+
   - 2.0.1 (2022-09-06)
     Fixed a bug where cronjob schedule is not getting parsed
 
