--- a/piwigo/umbrel-app.yml
+++ b/piwigo/umbrel-app.yml
@@ -6,7 +6,7 @@ version: "13.1.0"
 tagline: Perfect Replacement for Google Photos
 description: >-
   For First time installation, use credentials -
-  DB_HOST: {UMBREL_IP_ADDRESS}:3301
+  DB_HOST: db
   DB_USER:piwigo
   DB_PASSWORD:piwigo
   DB_NAME:piwigo
