--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndboss
 category: Lightning Node Management
 name: LndBoss
-version: "2.9.0"
+version: "2.9.2"
 tagline: A GUI for BalanceOfSatoshis
 description: LndBoss is a GUI for BalanceOfSatoshis.
   It is a tool that makes it easy to run your favorite
@@ -25,9 +25,10 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  - 2.9.0 (2022-10-26)
+  - 2.9.2 (2022-10-26)
     (Important Bug Fix): Fix batch open command where opens are failing with amount parsing
     and wrong rows getting dropped.
+    Update bos dependency to fix create and open group channel commands for taproot inputs.
 
   - 2.8.1 (2022-10-25)
     Added support for auto fee policy based on channel inactivity periods.
