--- a/libreoffice/docker-compose.yml
+++ b/libreoffice/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "2.1"
 
 services:
+    app_proxy:
+    environment:
+      APP_HOST: libreoffice_server_1
+      APP_PORT: 3000
+
   server:
     image: linuxserver/libreoffice:7.2.7@sha256:1f434cd23a010dce12af364cc0a7e71e4fdb8299bcc6f9b022ae7890b5475562
     restart: on-failure
@@ -10,5 +15,3 @@ services:
       - PGID=1000
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-    ports:
-    - 3000:3000
