Update LN Markets to v1.2.5

--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnmarkets
 category: Finance
 name: LN Markets
-version: "1.2.4"
+version: "1.2.5"
 tagline: Trade Bitcoin derivatives on Lightning
 description: >-
   LN Markets is the first Lightning-native Bitcoin derivatives
@@ -32,18 +32,4 @@ deterministicPassword: true
 submitter: LN Markets
 submission: https://github.com/getumbrel/umbrel/pull/879
 releaseNotes: >-
-  - Update LN Markets assets in the app store.
-
-  - Removed login page as Umbrel proxy handle it now.
-
-  - Added a loading screen for withdrawals and deposits.
-
-  - Added some metrics to the front (total margin traded, all time PL...).
-
-  - Fix websockets connection.
-
-  - Fix withdraw slider, now works as intended.
-
-  - Fix some typos in modals.
-
-  - Fix CORS policy.
+  - Remove deposit amount limitations
