Update Jam to v0.1.2

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: jam
 category: Finance
 name: Jam
-version: "0.1.1"
+version: "0.1.2"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,15 +13,7 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Basic fee settings
-
-  - Display fee summary on Send page
-
-  - Randomize mandatory fee config values on restarts
-
-  - Show sum of selected UTXOs in Jar details view
-
-  - Display transaction ID on successful direct-send
+  - Display error message if backend is unreachable
 developer: JoinMarket WebUI Organisation
 website: https://jamapp.org
 dependencies:
