Update Robosats to v0.2.2-alpha

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: robosats
 category: Finance
 name: RoboSats
-version: "v0.2.1-alpha"
+version: "v0.2.2-alpha"
 tagline: Simple and Private Bitcoin P2P Exchange
 description: >-
   RoboSats is a simple and private app to exchange bitcoin for national currencies. 
@@ -34,7 +34,25 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/releases/tag/v0.2.1-alpha
+  - The new Maker Form
+  
+  - New match making system on order maker
+  
+  - RoboSats PRO concep demo (Interactive fully customizable layout with widgets, drag and drop, then freeze the UI) . Check it out at unsafe.robosats.com/pro
+  
+  - New Web websocket System
+  
+  - Loading avatar placeholder animation
+  
+  - A large refactor of the frontend (many new functional components)
+  
+  - Persist data on Android
+  
+  - New currencies
+  
+  - New language : Chinese (simplified and traditional)
+  
+  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/releases/tag/v0.2.2-alpha
 developer: RoboSats
 website: https://learn.robosats.com
 dependencies: []
