--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -33,16 +33,24 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: >-
+releaseNotes: >
   1.6.12 is out!
 
+
   - Improve LNDHub support
+
   - Edit Pull Payment UI
+
   - Custodian Account Deposit UI
+
   - Add Yadio rate provider
+
   - Add support for updating POS app through Greenfield API 
+
   - Allow specifing fee block target for onchain payout processor
+
   - Greenfield: Extend LN GetInfo data
+  
   - Bug fixes and improvements, too.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
