--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.6.3"
+version: "1.6.12"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -33,19 +33,24 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: >-
-  1.6.3 is out!
+releaseNotes: >
+  1.6.12 is out!
 
-  - Lightning dashboard ⚡️
-  - Invoice receipts
 
-  Plugins:
-  - NFC Support Plugin
-  - Ticket Tailor plugin to sell tickets
-  - LNBank updates
+  - Improve LNDHub support
 
-  More details: https://twitter.com/BtcpayServer/status/1545444707169636353
+  - Edit Pull Payment UI
 
-  Other included updates (1.6.1-1.6.3): Minor improvements and bug fixes and ability to add a discount in the point of sale keypad!
+  - Custodian Account Deposit UI
+
+  - Add Yadio rate provider
+
+  - Add support for updating POS app through Greenfield API 
+
+  - Allow specifing fee block target for onchain payout processor
+
+  - Greenfield: Extend LN GetInfo data
+  
+  - Bug fixes and improvements, too.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
