--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: lnplus_web_1
       APP_PORT: "3777"
   web:
-    image: lightningnetworkplus/lnpclient:v0.1.22@sha256:4fe3dc405a946e804c570d6e04d737b2b1502d10c85c917f4237b27a89c5432c
+    image: lightningnetworkplus/lnpclient:v0.1.23@sha256:87812db57da64a223adfa7d3fe9f47e5f86a2900a40ba286f7bc572fc9a77a6d
     restart: on-failure
     stop_grace_period: 1m
     volumes:
@@ -18,4 +18,4 @@ services:
       CONFIG_PATH: "/lnd/lnd.conf"
       CERTIFICATE_PATH: "/lnd/tls.cert"
       API_URL: "https://lightningnetwork.plus/api/2/"
-      RAILS_ENV: "development"
+      RAILS_ENV: "production"
