Drop exports.sh. Add Docker image digest. Add submitter metadata

--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -22,3 +22,5 @@ gallery:
 path: "/pj"
 defaultUsername: ""
 defaultPassword: ""
+submitter: Nick Farrow
+submission: https://github.com/getumbrel/umbrel-apps/pull/229
