--- a/nolooking/docker-compose.yml
+++ b/nolooking/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     image: satsale/nolooking:0.1.0@sha256:c1c5089ef672a7c9b5002d86fcf4d6038a647338d1390f3ef631ef558d437da1
     restart: on-failure
     stop_grace_period: 1m
+    init: true
     volumes:
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
