Add release notes

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.6.12"
+version: "1.6.12-hotfix-1"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,6 +34,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  - Use optimization to directly connect to the nbx db for faster querying and better dashboard functionality
+  
+
   1.6.12 is out!
 
 
