Don't block hosts port 2283

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -108,8 +108,8 @@ services:
   immich-proxy:
     container_name: immich_proxy
     image: altran1502/immich-proxy:release
-    ports:
-      - 2283:8080
+    # expose:
+    #   - 8080
     logging:
       driver: none
     depends_on:
