Immich: set uid & gruop for postgres

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -106,6 +106,7 @@ services:
     container_name: immich-postgres
     hostname: immich-postgres
     image: postgres:14
+    user: "1000:1000"
     environment:
       POSTGRES_USER: ${APP_IMMICH_DB_USERNAME}
       POSTGRES_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
