--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -15,6 +15,20 @@ description: >
 
 
   An official app from Umbrel.
+releaseNotes: >-
+  - Update dependencies (anyhow, crossbeam-channel, crossbeam-utils, regex, serde, serde from , serde_json, signal-hook)
+  
+  - Don't log scripthash (#737)
+  
+  - Support new Electrum release getbalance response format (#717)
+  
+  - Add build matrix to test all features in CI (#706)
+  
+  - Install and run cargo-bloat in CI (#705)
+  
+  - Fix txid index collision handling (#653)
+  
+  - Use bitcoincore_rpc's getblockchaininfo implementation (#656)
 developer: Umbrel
 website: https://umbrel.com/
 dependencies:
