--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: electrs
 category: Finance
 name: Electrs
-version: "0.9.4-build-2"
+version: "0.9.9"
 tagline: A simple and efficient Electrum Server
 description: >
   Run your personal Electrum server and connect your Electrum-compatible wallet,
@@ -29,5 +29,45 @@ gallery:
   - 4.jpg
 path: ""
 defaultPassword: ""
+releaseNotes: >
+  0.9.9 (Jul 12 2022)
+
+  - Update dependencies (anyhow, crossbeam-channel, crossbeam-utils, regex, serde, serde from , serde_json, signal-hook)
+  
+  - Don't log scripthash (#737)
+
+
+  0.9.8 (Jun 3 2022)
+
+  - Update dependencies (serde_json, serde, bitcoin, bitcoincore-rpc, rayon, log)
+  
+  - Support new Electrum release getbalance response format (#717)
+
+
+  0.9.7 (Apr 30 2022)
+
+  - Add build matrix to test all features in CI (#706)
+  
+  - Install and run cargo-bloat in CI (#705)
+  
+  - Add guide for other Ubuntu & Debian releases to compile and install librocksdb (#696)
+  
+  - Update dependencies (anyhow, log, crossbeam-channel, rayon)
+
+
+  0.9.6 (Mar 4 2022)
+  
+  - Allow skipping default config files (#686)
+  
+  - Update dependencies (anyhow, serde-json)
+
+
+  0.9.5 (Feb 4 2022)
+
+  - Update dependencies (serde-json, serde, tempfile, crossbeam-channel)
+  
+  - Fix txid index collision handling (#653)
+  
+  - Use bitcoincore_rpc's getblockchaininfo implementation (#656)
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/242
