--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -49,8 +49,6 @@ services:
     restart: on-failure
     ports:
       - ${APP_CORE_LIGHTNING_DAEMON_PORT}:${APP_CORE_LIGHTNING_DAEMON_PORT}
-    environment:
-      LIGHTNINGD_NETWORK: ${APP_CORE_LIGHTNING_BITCOIN_CHAIN}
     command:
       - --bitcoin-rpcconnect=${APP_BITCOIN_NODE_IP}
       - --bitcoin-rpcuser=${APP_BITCOIN_RPC_USER}
@@ -59,6 +57,7 @@ services:
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:${APP_CORE_LIGHTNING_DAEMON_PORT}
       - --addr=statictor:${TOR_PROXY_IP}:29051
       - --tor-service-password=${TOR_PASSWORD}
+      - --network=${APP_CORE_LIGHTNING_BITCOIN_CHAIN}
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
