--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -38,4 +38,4 @@ defaultPassword: ""
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
 releaseNotes: >-
-  - Update RESTful API to add support for Liquidity Ads
+  - Support for testnet, signet and regtest 
