Clightning docs are wrong. mainnet network is not suppored, must be bitcoin

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:${APP_CORE_LIGHTNING_DAEMON_PORT}
       - --addr=statictor:${TOR_PROXY_IP}:29051
       - --tor-service-password=${TOR_PASSWORD}
-      - --network=${APP_BITCOIN_NETWORK}
+      - --network=${APP_CORE_LIGHTNING_BITCOIN_NETWORK}
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
