--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -10,6 +10,8 @@ description: >-
   You can open multiple lightning nodes in a single payment, improving privacy, saving on transaction fees and wait time.
 
   Read the article about [Lightning Powered PayJoin](https://chaincase.app/words/lightning-payjoin?ref=github) to hear all the benefits!
+
+  Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
   v0.1.0 -- Initial Halloween alpha release - many more features to come!
 developer: nolooking
