--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "0.11.1-build-4"
+version: "0.11.1-build-5"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -38,4 +38,4 @@ defaultPassword: ""
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
 releaseNotes: >-
-  - Update RESTful API to add support for Liquidity Ads
+  - Support for testnet, signet and regtest 
