--- a/kdenlive/umbrel-app.yml
+++ b/kdenlive/umbrel-app.yml
@@ -30,4 +30,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/217
